--- a/spec/std/isa/inst/F/fsgnj.s.yaml
+++ b/spec/std/isa/inst/F/fsgnj.s.yaml
@@ -33,8 +33,8 @@ access:
   vu: always
 data_independent_timing: true
 pseudoinstructions:
-  - when: (rs2 == rs1)
-    to: fmv.s
+  - when: (fs2 == fs1)
+    to: fmv.s fd,fs1
 
 operation(): |
   check_f_ok($encoding);
