--- a/spec/std/isa/inst/I/andi.yaml
+++ b/spec/std/isa/inst/I/andi.yaml
@@ -29,7 +29,7 @@ access:
 data_independent_timing: true
 pseudoinstructions:
   - when: imm == 255
-    to: zext.b
+    to: zext.b xd,xs1
 operation(): X[xd] = X[xs1] & $signed(imm);
 
 # SPDX-SnippetBegin
