--- a/spec/std/isa/inst/I/jalr.yaml
+++ b/spec/std/isa/inst/I/jalr.yaml
@@ -34,7 +34,7 @@ access:
 pseudoinstructions:
   - when: xd == 0
     to: jr imm(xs1)
-  - when: (rd == 0 && xs1 == x1 && imm == 0)
+  - when: (xd == 0 && xs1 == x1 && imm == 0)
     to: ret
 operation(): |
   XReg addr = (X[xs1] + $signed(imm)) & ~MXLEN'1;
