--- a/spec/std/isa/inst/Zbkb/packw.yaml
+++ b/spec/std/isa/inst/Zbkb/packw.yaml
@@ -31,6 +31,6 @@ access:
   vu: always
 data_independent_timing: true
 pseudoinstructions:
-  - when: (rs2 == 0x0)
-    to: zext.h
+  - when: (xs2 == 0x0)
+    to: zext.h xd,xs1
 operation(): |
